[package]
name = "onenormest"
version = "0.1.0"
edition = "2021"
description = "Sparse 1-norm and condition number estimator"
license = "BSD-3-Clause"

[dependencies]
anyhow = "1"
full = { path = "../full" }
rand = "0.8"

sparsetools = { version = "0.2.2", optional = true }
rlu = { version = "0.6", optional = true }
faer = { version = "0.19", optional = true }